[workspace]
members = ["astro_mod_integrator", "astro_modloader"]

[workspace.package]
version = "0.1.15"
authors = ["AstroTechies, localcc, konsti219"]
description = "Astroneer Modloader"

[workspace.dependencies]
astro_mod_integrator = { path = "./astro_mod_integrator" }

unreal_mod_manager = { rev = "6d10fb3c78720517a2f3e3d61dcaad2ae729cad2", git = "https://github.com/AstroTechies/unrealmodding", features = [
    "ue4_27",
    "cpp_loader",
] }

lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.3"
serde_json = "1.0.94"
serde = { version = "1.0.158", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
steamy-vdf = { git = "https://github.com/icewind1991/steamy" }
