[package]
name = "astro_mod_integrator"
version.workspace = true
authors.workspace = true
description = "Integration for Astroneer Modloader"
edition = "2021"

[dependencies]
unreal_mod_manager.workspace = true

lazy_static.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[build-dependencies]
unreal_mod_manager.workspace = true
walkdir = "2.3.3"
